--- a/app/src/main/res/layout/custom_detailed_item.xml
+++ b/app/src/main/res/layout/custom_detailed_item.xml
@@ -41,6 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:text="TextView"
+        android:textSize="20dp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
