build: Adding and updating the hotel detail.
- Adding and updating the hotel detail.
- Reset the name of client ID in Login.kt and SignUp.kt.
- Refactory a hotel document in string values resouce.

--- a/app/src/main/res/layout/activity_add_hotel.xml
+++ b/app/src/main/res/layout/activity_add_hotel.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddHotelActivity">
+    tools:context=".services.hotel.AddHotelActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -33,14 +33,15 @@
         <EditText
             android:id="@+id/descriptionEt"
             android:layout_width="0dp"
-            android:layout_height="54dp"
+            android:layout_height="100dp"
             android:layout_marginStart="45dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="45dp"
             android:background="@drawable/edit_text_bg"
             android:ems="10"
+            android:scrollHorizontally="false"
             android:hint="Description"
-            android:inputType="text"
+            android:inputType="text|textMultiLine"
             android:paddingHorizontal="20dp"
             android:text=""
             android:textSize="16sp"
