--- a/app/src/main/res/layout/activity_personal_confirmation.xml
+++ b/app/src/main/res/layout/activity_personal_confirmation.xml
@@ -57,7 +57,7 @@
             </LinearLayout>
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/nextBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="10dp"
