--- a/app/src/main/res/layout/hotel_search_list_item.xml
+++ b/app/src/main/res/layout/hotel_search_list_item.xml
@@ -52,12 +52,12 @@
 
     <ImageButton
         android:id="@+id/heartBtn"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="30dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:background="@drawable/ic_heart_red"
+        android:scaleType="centerCrop"
+        android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="@+id/hotelNameSearchTV" />
 
     <TextView
