--- a/app/src/main/res/layout/price_detail_confirm.xml
+++ b/app/src/main/res/layout/price_detail_confirm.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="5dp"
+        android:layout_marginStart="5dp"
         android:orientation="horizontal"
         android:weightSum="10"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,6 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
             android:layout_weight="4"
             android:orientation="vertical">
 
