--- a/app/src/main/res/layout/room_confirm_booking.xml
+++ b/app/src/main/res/layout/room_confirm_booking.xml
@@ -9,8 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:paddingVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -18,7 +18,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="5dp"
             android:orientation="horizontal"
             android:weightSum="10">
 
@@ -42,10 +41,9 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="5dp"
-            android:weightSum="10"
-            >
+            android:orientation="horizontal"
+            android:weightSum="10">
 
             <ImageView
                 android:id="@+id/roomImg"
@@ -60,19 +58,18 @@
             <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="6"
-                android:orientation="vertical"
-                android:gravity="center"
                 android:layout_marginStart="5dp"
-                >
+                android:layout_weight="6"
+                android:gravity="center"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/roomPeople"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical"
-                    android:drawablePadding="5dp"
                     android:drawableLeft="@drawable/ic_people_group"
+                    android:drawablePadding="5dp"
+                    android:gravity="center_vertical"
 
                     android:text="4 adults" />
             </LinearLayout>
