build: room activity

--- a/app/src/main/res/layout/activity_hotel_detail2.xml
+++ b/app/src/main/res/layout/activity_hotel_detail2.xml
@@ -7,7 +7,7 @@
     tools:context=".HotelDetailActivity">
 
     <Button
-        android:id="@+id/ChooseRoomBtn"
+        android:id="@+id/BookingBtn"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="10dp"
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="10dp"
-        app:layout_constraintBottom_toTopOf="@+id/ChooseRoomBtn"
+        app:layout_constraintBottom_toTopOf="@+id/BookingBtn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></FrameLayout>
