--- a/app/src/main/res/layout/choose_saved_item.xml
+++ b/app/src/main/res/layout/choose_saved_item.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
         android:layout_marginHorizontal="15dp"
+        android:layout_marginVertical="20dp"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -17,13 +18,12 @@
             android:id="@+id/hotelNameItemTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:text="Da Nang number one"
-            android:textStyle="bold"
-            android:textSize="15sp"
+            android:layout_weight="1"
+            android:ellipsize="end"
             android:maxLines="1"
-            android:ellipsize="end"/>
+            android:text="Da Nang number one"
+            android:textSize="15sp" />
 
         <ImageButton
             android:id="@+id/addItemIB"
