--- a/app/src/main/res/layout/fragment_sub_hotel_detail_address.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_address.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    tools:context=".SubHotelDetailAddress"
+    tools:context=".hotel.hotel_detail.SubHotelDetailAddress"
     android:layout_marginBottom="10dp"
     android:background="@color/lightgrey"
     >
