--- a/app/src/main/res/layout/fragment_sub_hotel_detail_period_cost.xml
+++ b/app/src/main/res/layout/fragment_sub_hotel_detail_period_cost.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center_horizontal"
-    tools:context=".SubHotelDetailPeriod"
+    tools:context=".hotel.hotel_detail.SubHotelDetailPeriod"
     android:paddingVertical="10dp"
     >
     <LinearLayout
