--- a/app/src/main/res/layout/room_recyclerview_layout.xml
+++ b/app/src/main/res/layout/room_recyclerview_layout.xml
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Button"
+        android:text="Select"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/originalPriceTV" />
