--- a/app/src/main/res/layout/activity_add_hotel.xml
+++ b/app/src/main/res/layout/activity_add_hotel.xml
@@ -179,7 +179,7 @@
             android:text="Submit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/fitnessCenterCheckbox" />
+            app:layout_constraintTop_toBottomOf="@+id/utilities_flexbox" />
 
 
         <com.google.android.flexbox.FlexboxLayout
@@ -202,6 +202,9 @@
                 android:id="@+id/chipText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_bg"
+                android:ems="10"
+                custom:hint_="Swimming Pool"
                 custom:chipPadding_="4dp"
                 custom:chipTextPadding_="2dp"
                 custom:textColor_="@android:color/black"
@@ -212,32 +215,6 @@
         </com.google.android.flexbox.FlexboxLayout>
 
 
-        <CheckBox
-            android:id="@+id/freeWifiCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="Free Wifi"
-            app:layout_constraintStart_toStartOf="@+id/numberStreetEt"
-            app:layout_constraintTop_toBottomOf="@+id/utilities_flexbox" />
-
-        <CheckBox
-            android:id="@+id/swimmingPool"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Swimming Pool"
-            app:layout_constraintStart_toStartOf="@+id/numberStreetEt"
-            app:layout_constraintTop_toBottomOf="@+id/freeWifiCheckbox" />
-
-        <CheckBox
-            android:id="@+id/fitnessCenterCheckbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="Fitness center"
-            app:layout_constraintStart_toStartOf="@+id/numberStreetEt"
-            app:layout_constraintTop_toBottomOf="@+id/swimmingPool" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
