--- a/app/src/main/res/layout/hotel_search_list_item.xml
+++ b/app/src/main/res/layout/hotel_search_list_item.xml
@@ -9,7 +9,6 @@
     android:layout_marginBottom="10dp"
     >
 
-
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewPager2"
         android:layout_width="match_parent"
@@ -54,7 +53,7 @@
         android:id="@+id/heartBtn"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:background="@drawable/ic_heart_red"
+        android:background="@drawable/add_circle_outline"
         android:scaleType="centerCrop"
         android:layout_marginEnd="15dp"
         app:layout_constraintEnd_toEndOf="parent"
