--- a/app/src/main/res/layout/fragment_hotel_detail_image_service_title.xml
+++ b/app/src/main/res/layout/fragment_hotel_detail_image_service_title.xml
@@ -8,6 +8,7 @@
     android:layout_gravity="center_horizontal"
     android:background="@color/lightgrey">
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/imageLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <LinearLayout
