build: add logic in room detail

--- a/app/src/main/res/layout/activity_room_add_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_room_add_hotel_detail.xml
@@ -97,7 +97,7 @@
             app:layout_constraintTop_toBottomOf="@+id/bedroom_HQ" />
 
         <EditText
-            android:id="@+id/editTextNumber"
+            android:id="@+id/areaET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -112,14 +112,14 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="7dp"
             android:text="square meters"
-            app:layout_constraintBottom_toBottomOf="@+id/editTextNumber"
-            app:layout_constraintStart_toEndOf="@+id/editTextNumber" />
+            app:layout_constraintBottom_toBottomOf="@+id/areaET"
+            app:layout_constraintStart_toEndOf="@+id/areaET" />
 
 
         <com.nex3z.togglebuttongroup.MultiSelectToggleGroup
             android:id="@+id/roomSelected_MultiGroup"
-            android:layout_width="0dp"
-            android:layout_height="31dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView21"
@@ -156,7 +156,7 @@
             android:text="Next"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
+            app:layout_constraintTop_toBottomOf="@+id/areaET" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
