--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -163,14 +163,13 @@
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <TextView
+                <EditText
                     android:id="@+id/emailET"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_marginStart="5dp"
-                    android:layout_marginEnd="50dp"
                     android:background="@null"
                     android:gravity="center_vertical"
                     android:inputType="textMultiLine"
@@ -190,57 +189,36 @@
                     android:layout_height="20dp"
                     android:scaleType="centerCrop"
                     android:src="@drawable/baseline_check_circle_24"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="@+id/textView22"
                     app:tint="@color/primary" />
 
-                <android.widget.Button
-                    android:id="@+id/emailBtn"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/custom_button_booking"
-                    android:gravity="right|center_vertical"
-                    android:includeFontPadding="false"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:shadowColor="@color/white"
-                    android:text="Change"
-                    android:textColor="@color/primary"
-                    android:textSize="14sp"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/emailET"
-                    app:layout_constraintTop_toBottomOf="@+id/emailVerified"
-                    app:rippleColor="@color/white"
-                    app:strokeColor="@color/white" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingVertical="5dp">
+                android:padding="5dp">
 
                 <TextView
+                    android:id="@+id/phoneLB"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
-                    android:layout_marginRight="5dp"
                     android:gravity="center_vertical"
                     android:paddingLeft="5dp"
-                    android:text="Phone:"
+                    android:text="Phone"
                     android:textColor="@color/primary"
-                    android:textSize="20sp"
                     android:textStyle="normal" />
 
-                <TextView
+                <EditText
                     android:id="@+id/phoneET"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:background="@null"
@@ -249,27 +227,9 @@
                     android:paddingLeft="5dp"
                     android:text="121212"
                     android:textColor="@color/black"
-                    android:textSize="20sp"
+                    android:textSize="15sp"
                     android:textStyle="normal" />
-
-                <android.widget.Button
-                    android:id="@+id/phoneBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="4dp"
-                    android:background="@drawable/custom_button_booking"
-                    android:gravity="right|center_vertical"
-                    android:includeFontPadding="false"
-                    android:minWidth="0dp"
-                    android:minHeight="0dp"
-                    android:shadowColor="@color/white"
-                    android:text="Change"
-                    android:textColor="@color/primary"
-                    android:textSize="14sp"
-                    app:rippleColor="@color/white"
-                    app:strokeColor="@color/white" />
-            </LinearLayout>
-        </LinearLayout>
+            </LinearLayout>        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
