--- a/app/src/main/res/layout/activity_detail_list.xml
+++ b/app/src/main/res/layout/activity_detail_list.xml
@@ -12,10 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:textSize="40dp"
-        android:text="List name"
-        android:textStyle="bold"
-        android:textColor="@color/black"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -25,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="3 item saved"
+        android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/listname" />
 
