--- a/app/src/main/res/layout/activity_hotel_search.xml
+++ b/app/src/main/res/layout/activity_hotel_search.xml
@@ -5,7 +5,7 @@
     android:id="@+id/hotelSearch"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".search.HotelSearch">
+    tools:context=".HotelSearch">
 
     <TextView
         android:id="@+id/textView8"
