Revert "Merge branch 'clone-master' of https://github.com/tientran505/hotel-booking-android-app into feature/AT_profile_feature"
This reverts commit 7f08625d510368918f080d00135020751190fa41, reversing
changes made to 85a175752af2b51b5b4a248648c5d7d2014641f0.

--- a/app/src/main/res/layout/partner_fragment_booking.xml
+++ b/app/src/main/res/layout/partner_fragment_booking.xml
@@ -3,27 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".partner.booking.PartnerBookingFragment">
+    tools:context=".partner.PartnerBookingFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/textView18"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Bookings"
-            android:textSize="25sp"
-            android:layout_marginStart="10dp"
-            android:textStyle="bold"
-            />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/bookingRV"
-            android:layout_marginTop="10dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </LinearLayout>
+        android:orientation="vertical"></LinearLayout>
 </FrameLayout>
